--- a/form/style/global.css
+++ b/form/style/global.css
@@ -1,42 +1,93 @@
-.label
-{
-    font-family: sans-serif;
-    color:red;
-    margin-top: 20px;
-    margin-bottom: 10px;
-    float:left;
-    width:1fr;
-    
+* {
+    box-sizing: border-box;
 }
 
-.formbox
+input[type=text], select, textarea
 {
-    font-family: sans-serif;
-    color:aqua;
-    border: 2px solid grey;
+    width: 100%;
+    padding: 12px;
+    border: 1px solid #ccc;
     border-radius: 4px;
-    padding:10px 10px 10px 10px;
-    margin:10px;
-    width:2fr;
-    margin-left: 200px;
-    position:static;
 }
 
-formbox2
+label
 {
-    
-    font-family: sans-serif;
-    color:green;
-    border: 2px solid grey;
+    padding: 12px 12px 12px 12px;
+    display: inline-block;
+    font-family: 'Rubik:400', sans-serif;
+    color: #cccccc;
+}
+
+input[type=submit]
+{
+    background-color: #19b792;
+    color: white;
+    padding: 12px 20px;
+    margin-bottom: 20px;
+    border: none;
     border-radius: 4px;
-    padding:10px;
-    margin:10px;
-    float:left;
+    cursor: pointer;
+    float: right;
+    font-family: 'Rubik:400', sans-serif;
+}
+
+.container
+{
+    border-radius: 5px;
+    background-color: #3a3a3a;
+    padding: 50px;
+}
+
+.col-25
+{
+    float: left;
+    width: 25%;
+    margin-top: 6px;
+}
+
+.col-75
+{
+    float: left;
+    width: 75%;
+    margin-top: 6px;
+}
+
+
+input[type=submit]:hover
+{
+    background-color: #17a886;
+}
+
+.row:after
+{
+    content: "";
+    display: table;
+    clear: both;
 }
 
 .row
 {
-    width:100%;
-    display:inline;
-    padding:50px;
+    width: 100%;
+}
+
+@media (max-width: 600px) {
+    .col-25, .col-75, input[type=submit] {
+        width: 100%;
+        margin-top: 0;
+    }
+    input[type=submit]{
+        margin-left: auto;
+        margin-right:auto;
+    }
+}
+#success
+{
+  color:#33bf3b;
+}
+
+
+#copyright
+{
+    font-family: 'Rubik:400', sans-serif;
+    color: #cccccc;
 }
